# DIYSiri-max

./: .gitignore  README.md  gitignore
Archive (NOT USED)/DIY-Siri/: ClockHelper.cpp  ClockHelper.h  DIY-Siri.ino  UARTHelper.cpp
Archive (NOT USED)/DIYSiri_Pi/: main.py  settings.py
Archive (NOT USED)/DIYSiri_Pi/HelperModules/AIPromptToAudio/: PromptToAudioHelper.py
Archive (NOT USED)/DIYSiri_Pi/HelperModules/AIPromptToText/: AIPrompting.py
Archive (NOT USED)/DIYSiri_Pi/HelperModules/HelperForHelper/: WaveFileWriting.py
Archive (NOT USED)/DIYSiri_Pi/HelperModules/Prompting/: PromptFunctions.py
ArduinoSiriLogic/: ADCFunctions.c  ADCFunctions.h  ClockHelper.c  ClockHelper.h  main.c
DIY-Siri/: ADCFunctions.cpp  ADCFunctions.h  ClockHelper.cpp  ClockHelper.h  DIY-Siri.ino  UARTHelper.h
DIYSiri_Pi/: main.py
DIYSiri_Pi/HelperModules/HelperForHelper/: WaveFileWriting.py
DIYSiri_Pi/HelperModules/Prompting/: PromptFunctions.py
DIYSiri_Pi/HelperModules/WakeWord/: WakeWordFunctions.py
MaxPiClientLogic/: main.py  requirements.txt
MaxPiClientLogic/HelperModules/: AudioPlaying.py  AudioRecording.py  Networking.py  PromptHelper.py  PyAudioHelper.py  WaveFileWriter.py
MaxPiClientLogic/Settings/: settings.py
MaxPiServerLogic/: Debug.py  WakeWordServer.py  mahcks.onnx  mahcks.tflite  main.py  mocks.onnx  pyproject.toml  requirements.txt
MaxPiServerLogic/HelperModules/: Networking.py  Prompting.py
