[project]
name = "maxpiserverlogic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "kokoro>=0.9.4",
    "ollama>=0.6.2",
    "openwakeword>=0.4.0",
    "soundfile>=0.14.0",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
]
